--- a/.github/workflows/Run.yml
+++ b/.github/workflows/Run.yml
@@ -33,7 +33,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        submodules: recursive
       
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -52,7 +51,6 @@ jobs:
         echo "Version: $VERSION_NAME"
         echo "Branch: ${{ github.ref_name }}"
         echo "Commit: ${{ github.sha }}"
-        echo "Workspace: $GITHUB_WORKSPACE"
       
     - name: Cache Gradle packages
       uses: actions/cache@v3
@@ -77,93 +75,101 @@ jobs:
         echo "Android app directory contents:"
         ls -la android_app/
         
-        if [ ! -f "android_app/build.gradle" ]; then
-          echo "ERROR: android_app/build.gradle not found!"
-          exit 1
-        fi
+        # التحقق من الملفات الأساسية
+        required_files=(
+          "android_app/build.gradle"
+          "android_app/settings.gradle"
+          "android_app/app/build.gradle"
+          "android_app/gradle/wrapper/gradle-wrapper.properties"
+        )
         
-        if [ ! -f "android_app/settings.gradle" ]; then
-          echo "ERROR: android_app/settings.gradle not found!"
-          exit 1
-        fi
-        
-        if [ ! -d "android_app/app" ]; then
-          echo "ERROR: android_app/app directory not found!"
-          exit 1
-        fi
-        
-        if [ ! -f "android_app/app/build.gradle" ]; then
-          echo "ERROR: android_app/app/build.gradle not found!"
-          exit 1
-        fi
+        for file in "${required_files[@]}"; do
+          if [ ! -f "$file" ]; then
+            echo "ERROR: $file not found!"
+            exit 1
+          fi
+        done
         
         echo "Project structure verified successfully!"
         
     - name: Create necessary directories
       run: |
+        echo "Creating necessary directories..."
+        
         # إنشاء المجلدات الضرورية فقط إذا كانت غير موجودة
-        mkdir -p android_app/app/src/main/res/font
-        mkdir -p android_app/app/src/main/res/drawable
-        mkdir -p android_app/app/src/main/res/values
-        mkdir -p android_app/app/src/main/res/xml
+        mkdir -p android_app/app/src/main/res/font || true
+        mkdir -p android_app/app/src/main/res/drawable || true
+        mkdir -p android_app/app/src/main/res/values || true
+        mkdir -p android_app/app/src/main/res/xml || true
         
         # إنشاء ملف colors.xml إذا لم يكن موجوداً
         if [ ! -f "android_app/app/src/main/res/values/colors.xml" ]; then
-          cat > android_app/app/src/main/res/values/colors.xml << 'EOF'
-          <?xml version="1.0" encoding="utf-8"?>
-          <resources>
-              <color name="marina_blue">#1A4B84</color>
-              <color name="marina_blue_dark">#0F2D4F</color>
-              <color name="marina_gold">#D4AF37</color>
-              <color name="marina_gold_dark">#B8941F</color>
-              <color name="white">#FFFFFF</color>
-              <color name="black">#000000</color>
-          </resources>
-          EOF
+          cat << 'EOF' > android_app/app/src/main/res/values/colors.xml
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <color name="marina_blue">#1A4B84</color>
+    <color name="marina_blue_dark">#0F2D4F</color>
+    <color name="marina_gold">#D4AF37</color>
+    <color name="marina_gold_dark">#B8941F</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+</resources>
+EOF
+          echo "Created colors.xml"
         fi
         
         # إنشاء ملف strings.xml إذا لم يكن موجوداً
         if [ ! -f "android_app/app/src/main/res/values/strings.xml" ]; then
-          cat > android_app/app/src/main/res/values/strings.xml << 'EOF'
-          <?xml version="1.0" encoding="utf-8"?>
-          <resources>
-              <string name="app_name">Marina Hotel</string>
-              <string name="loading">جاري التحميل...</string>
-              <string name="error_network">خطأ في الاتصال بالشبكة</string>
-              <string name="retry">إعادة المحاولة</string>
-          </resources>
-          EOF
+          cat << 'EOF' > android_app/app/src/main/res/values/strings.xml
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string name="app_name">Marina Hotel</string>
+    <string name="loading">جاري التحميل...</string>
+    <string name="error_network">خطأ في الاتصال بالشبكة</string>
+    <string name="retry">إعادة المحاولة</string>
+</resources>
+EOF
+          echo "Created strings.xml"
         fi
 
     - name: Make gradlew executable
       run: |
         if [ -f "android_app/gradlew" ]; then
           chmod +x android_app/gradlew
+          echo "Made gradlew executable"
         else
-          echo "gradlew not found, creating it..."
-          cd android_app
-          ./gradlew wrapper --gradle-version=8.5 --no-daemon
-          chmod +x gradlew
-          cd ..
+          echo "gradlew not found, using gradle directly"
         fi
       
     - name: Clean project
       run: |
         cd android_app
-        ./gradlew clean --no-daemon --console=plain
+        if [ -f "gradlew" ]; then
+          ./gradlew clean --no-daemon --console=plain
+        else
+          gradle clean --no-daemon --console=plain
+        fi
         
     - name: Build APK
       run: |
         cd android_app
         
-        # بناء APK مع إخراج مفصل
+        # بناء APK
         if [ "$BUILD_TYPE" = "release" ]; then
           echo "Building release APK..."
-          ./gradlew assembleRelease --no-daemon --console=verbose --info --stacktrace
+          if [ -f "gradlew" ]; then
+            ./gradlew assembleRelease --no-daemon --console=plain
+          else
+            gradle assembleRelease --no-daemon --console=plain
+          fi
           APK_PATH="app/build/outputs/apk/release/app-release.apk"
         else
           echo "Building debug APK..."
-          ./gradlew assembleDebug --no-daemon --console=verbose --info --stacktrace
+          if [ -f "gradlew" ]; then
+            ./gradlew assembleDebug --no-daemon --console=plain
+          else
+            gradle assembleDebug --no-daemon --console=plain
+          fi
           APK_PATH="app/build/outputs/apk/debug/app-debug.apk"
         fi
         
@@ -177,7 +183,7 @@ jobs:
         else
           echo "APK build failed - file not found: $APK_PATH"
           echo "Directory contents:"
-          ls -la app/build/outputs/apk/
+          ls -la app/build/outputs/apk/ || true
           exit 1
         fi
         
