--- a/.github/workflows/android-debug.yml
+++ b/.github/workflows/android-debug.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.22.2'
           channel: 'stable'
 
       - name: Prepare project
