--- a/.github/workflows/android-debug.yml
+++ b/.github/workflows/android-debug.yml
@@ -32,6 +32,23 @@ jobs:
         with:
           flutter-version: '3.22.2'
           channel: 'stable'
+          cache: true
+
+      - name: Cache Pub (global)
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            mobile/.dart_tool
+          key: ${{ runner.os }}-pub-${{ hashFiles('mobile/pubspec.lock') }}
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('mobile/android/gradle/wrapper/gradle-wrapper.properties', 'mobile/android/build.gradle', 'mobile/android/app/build.gradle') }}
 
       - name: Prepare project
         working-directory: mobile
