--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   pdf: ^3.11.1
   printing: ^5.13.2
   path_provider: ^2.1.4
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
