fix: Resolve Android APK build issues
🔧 Fixed NDK Version:
• Updated from NDK 23.1.7779620 to 25.1.8937393
• Resolves compatibility issues with Flutter plugins

🏗️ Fixed Code Generation:
• Added dart run build_runner build step before APK build
• Generates missing .g.dart files for Drift database
• Fixes compilation errors for local_db and DAOs

📱 Updated Build Process:
• Use flutter build apk instead of gradlew
• Corrected APK output paths to flutter-apk directory
• Added proper code generation in retry logic

✅ Build Process:
1. Generate code with build_runner
2. Build APK with flutter build apk --debug
3. Verify APK at build/app/outputs/flutter-apk/
4. Upload as android-debug artifact

Capy jam: jam_01JBWC2RBHGM8YDRHPQPNJ22D0

Co-authored-by: Capy <capy@capy.ai>

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -67,68 +67,64 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       
-      # Step 7: Make Gradlew Executable
-      - name: Make Gradlew Executable
+      # Step 7: Generate Code (Drift Database Files)
+      - name: Generate Code
         run: |
-          cd mobile/android
-          chmod +x ./gradlew
+          cd mobile
+          flutter packages get
+          dart run build_runner build --delete-conflicting-outputs
       
-      # Step 8: Clean Build
-      - name: Clean Build
-        run: |
-          cd mobile/android
-          ./gradlew clean --stacktrace --no-daemon
-      
-      # Step 9: Build Debug APK (First Attempt)
+      # Step 8: Build Debug APK (First Attempt)
       - name: Build Debug APK
         id: build_apk
         continue-on-error: true
         run: |
-          cd mobile/android
-          ./gradlew assembleDebug --stacktrace --no-daemon
+          cd mobile
+          flutter build apk --debug
       
-      # Step 10: Build Debug APK (Retry with Refresh Dependencies)
+      # Step 9: Build Debug APK (Retry with Refresh Dependencies)
       - name: Build Debug APK (Retry)
         if: steps.build_apk.outcome == 'failure'
         run: |
-          cd mobile/android
-          ./gradlew assembleDebug --refresh-dependencies --stacktrace --no-daemon
+          cd mobile
+          flutter clean
+          flutter packages get
+          dart run build_runner build --delete-conflicting-outputs
+          flutter build apk --debug
       
-      # Step 11: Verify Build Success
+      # Step 10: Verify Build Success
       - name: Verify Build Success
         run: |
-          if [ ! -d "mobile/android/app/build/outputs/apk/debug" ]; then
-            echo "❌ APK build failed - debug directory does not exist"
-            exit 1
-          fi
-          
-          if ls mobile/android/app/build/outputs/apk/debug/*.apk 1> /dev/null 2>&1; then
+          cd mobile
+          if ls build/app/outputs/flutter-apk/*.apk 1> /dev/null 2>&1; then
             echo "✅ APK build successful"
-            ls -la mobile/android/app/build/outputs/apk/debug/
+            ls -la build/app/outputs/flutter-apk/
           else
             echo "❌ APK build failed - no APK files found"
+            ls -la build/app/outputs/ || true
             exit 1
           fi
       
-      # Step 12: Upload APK Artifact
+      # Step 11: Upload APK Artifact
       - name: Upload APK as artifact
         if: success()
         uses: actions/upload-artifact@v3
         with:
           name: android-debug
-          path: mobile/android/app/build/outputs/apk/debug/*.apk
+          path: mobile/build/app/outputs/flutter-apk/*.apk
           retention-days: 30
       
-      # Step 13: Display Build Information
+      # Step 12: Display Build Information
       - name: Display Build Information
         run: |
           echo "🏗️ Build completed successfully!"
-          echo "📱 APK Location: mobile/android/app/build/outputs/apk/debug/"
+          echo "📱 APK Location: mobile/build/app/outputs/flutter-apk/"
           echo "📦 Artifact Name: android-debug"
           echo "🔄 Retention: 30 days"
           
           # Display APK details
-          for apk in mobile/android/app/build/outputs/apk/debug/*.apk; do
+          cd mobile
+          for apk in build/app/outputs/flutter-apk/*.apk; do
             if [ -f "$apk" ]; then
               echo "📋 APK Details:"
               echo "   File: $(basename "$apk")"
